main div background color added

--- a/assignment/stylesheet.css
+++ b/assignment/stylesheet.css
@@ -1,4 +1,8 @@
 header{
     background-color: purple;
     color: goldenrod;
+    text-align: center;
+}
+main{
+    background-color: lightgray;
 }
